@@ -400,7 +400,7 @@ ob_end_flush ();
         </tr>
       </table>
     </form>
-    <script type="text/javascript" language="javascript">
+    <script type="text/javascript" >
 <!-- <![CDATA[
     // This script borrowed from phpMyAdmin with some mofification.
       function addMe ( areaname, myValue ) {
